--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.2.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "wavesurfer.js": "^7.12.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
