--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,4 +1,3 @@
-# audio-annotation/backend/docker-compose.yml
 version: '3.8'
 services:
   api:
@@ -6,9 +5,9 @@ services:
     ports:
       - "3001:3001"
     volumes:
-      # Map ไฟล์จากเครื่องจริง เข้าไปใน Docker
-      # เพื่อให้ข้อมูลยังอยู่แม้ลบ Container
+      # 🟢 บรรทัดนี้คือหัวใจสำคัญ!
+      # ซ้าย (./data) = โฟลเดอร์ในเครื่องคุณ
+      # ขวา (/app/data) = โฟลเดอร์ใน Docker ที่เราแก้โค้ดไปชี้เมื่อกี้
       - ./data:/app/data 
-      # หมายเหตุ: คุณอาจต้องแก้โค้ด server.ts ให้ path ไปอ่านไฟล์ใน /app/data แทน root
     environment:
       - PORT=3001
