--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.10.3",
+    "socket.io-client": "^4.7.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "recharts": "^2.10.3"
+    "wavesurfer.js": "^7.12.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
